--- a/index.html
+++ b/index.html
@@ -155,41 +155,54 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui, -app
 .mrk.chiusa{ opacity:.35; filter: grayscale(1); }
 
 /* === Popup farmacia === */
+
+.typeTag{
+  display:inline-block;
+  margin-left:8px;
+  padding:3px 8px;
+  border-radius:999px;
+  font-size:10px;
+  font-weight:900;
+  letter-spacing:.10em;
+  text-transform:uppercase;
+  vertical-align:middle;
+}
+.typeTag.priv{
+  background: rgba(0,255,156,.12);
+  color:#00a86b;
+  border:1px solid rgba(0,255,156,.35);
+}
+.typeTag.com{
+  background: rgba(255,77,77,.12);
+  color:#c91c1c;
+  border:1px solid rgba(255,77,77,.35);
+}
+.popupLinks{ display:flex; gap:8px; flex-wrap:wrap; margin-top:10px; }
+.popupLinkBtn{
+  display:inline-block;
+  padding:8px 10px;
+  border-radius:10px;
+  border:1px solid #d6d6d6;
+  text-decoration:none;
+  font-size:12px;
+  font-weight:850;
+}
+.popupLinkBtn.maps{
+  background:#0e0e0e;
+  border-color:#0e0e0e;
+  color:#ffffff;
+}
+.popupLinkBtn.materiali{
+  background:#f2f2f2;
+  border-color:#d6d6d6;
+  color:#0e0e0e;
+}
+
 .popupWrap{
   min-width: 260px;
   color:#0b0b0b;
   font-size:13px;
 }
-.popupHeaderRow{ display:flex; align-items:flex-start; justify-content:space-between; gap:8px; }
-.popupHeaderRow h3{ margin:0; font-size:14px; font-weight:900; color:#111; line-height:1.2; }
-.popupTypeTag{
-  display:inline-block;
-  font-size:10px;
-  font-weight:900;
-  letter-spacing:.12em;
-  padding:3px 6px;
-  border-radius:8px;
-  border:1px solid rgba(255,77,77,.55);
-  color:#ff4d4d;
-  text-transform:uppercase;
-  white-space:nowrap;
-  margin-top:1px;
-}
-.popupLinks{ display:flex; gap:8px; margin-top:8px; flex-wrap:wrap; }
-.popupLinkBtn{
-  display:inline-flex;
-  align-items:center;
-  gap:6px;
-  padding:7px 10px;
-  border-radius:10px;
-  border:1px solid #d7d7d7;
-  background:#f7f7f7;
-  color:#111;
-  font-weight:800;
-  text-decoration:none;
-}
-.popupLinkBtn:hover{ background:#efefef; }
-
 .popupWrap h3{
   margin:0 0 6px;
   font-size:14px;
@@ -314,10 +327,6 @@ textarea.inlineInput{ min-height: 64px; resize: vertical; }
     <div style="margin-top:12px">
       <div class="section-chip">Legenda <small>mappa</small></div>
       <div class="legend-row"><span class="square c-comune-coperto"></span> Comune con referente</div>
-      <div class="legend-row" style="margin-top:6px"><span class="section-chip" style="padding:3px 6px; font-size:9px">Forma marker</span></div>
-      <div class="legend-row"><span class="dot c-contattare"></span> Privata (cerchio)</div>
-      <div class="legend-row"><span class="square c-contattare"></span> Comunale (quadrato)</div>
-
       <div class="legend-row"><span class="square c-comune-orfano"></span> Comune orfano</div>
       <div class="legend-row"><span class="dot c-contattare"></span> Da contattare</div>
       <div class="legend-row"><span class="dot c-trattativa"></span> In trattativa</div>
@@ -454,12 +463,11 @@ function aggiornaStiliComuni(){
 ================================ */
 function iconFarmacia(state, closed, gestione){
   const cls = stateClass(state);
-  const isComunale = (gestione || '').toString().toLowerCase().includes('comunal');
-  const shape = isComunale ? 'square' : 'dot';
-  const extra = closed ? ' chiusa' : '';
+  const isCom = /comun/i.test((gestione||'').toString());
+  const shape = isCom ? 'sq' : 'dot';
   return L.divIcon({
     className:'',
-    html:`<div class="mrk ${shape} ${cls}${extra}"></div>`,
+    html:`<div class="mrk ${shape} ${cls} ${closed ? 'closed':''}"></div>`,
     iconSize:[14,14],
     iconAnchor:[7,7]
   });
@@ -562,9 +570,9 @@ function buildPopupHtml(row, farmaciaId){
         Chiusa temporaneamente
       </label>
       <div class="popupLinks">
-        <a class="popupLinkBtn" href="${esc(maps)}" target="_blank" rel="noopener">📍 Apri in Maps</a>
-        <a class="popupLinkBtn" href="${esc(DRIVE_MATERIALI)}" target="_blank" rel="noopener">📁 Materiali</a>
-      </div>
+  <a class="popupLinkBtn maps" href="${escapeAttr(mapsUrl)}" target="_blank" rel="noopener">Apri in Maps</a>
+  <a class="popupLinkBtn materiali" href="${escapeAttr(DRIVE_MATERIALI)}" target="_blank" rel="noopener">Materiali campagna</a>
+</div>
     </div>
 
     <div class="popupActions">
@@ -630,7 +638,6 @@ function attachPopupHandlers(marker, row, farmaciaId){
 
       marker.setPopupContent(buildPopupHtml(row, farmaciaId));
       marker.openPopup();
-      attachPopupHandlers(marker, row, farmaciaId);
     }
   });
 
@@ -674,7 +681,6 @@ function attachPopupHandlers(marker, row, farmaciaId){
 
       marker.setPopupContent(buildPopupHtml(row, farmaciaId));
       marker.openPopup();
-      attachPopupHandlers(marker, row, farmaciaId);
     });
   }
 }
